# chessbot-heuristic-ai

./: .gitignore  README.md  notebook.py  pyproject.toml
.claude/: settings.local.json
__marimo__/session/: notebook.py.json
chessbot/: __init__.py  engine.py  evaluation.py  genetic.py  genome.py  tournament.py  utils.py
chessbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_engine.py  test_evaluation.py  test_genetic.py  test_genome.py  test_tournament.py
