[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessbot"
version = "0.1.0"
description = "Evolutionary chess engine using genetic algorithms"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.10",
    "numpy>=1.24",
    "marimo>=0.6",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["chessbot*"]
